# aegnec2

./: .hgtags  CMakeLists.txt  ChangeLog.txt  Install.md  Install.txt  Licence.md  Licence.txt  ReadMe.md  ReadMe.txt  config.h.cmake
CMakeTests/: testcputime.f  testetime.f  testflush.f  testsecond.f
cnec2/: CMakeLists.txt  cnec2d.c  cnec2d.h  nec.c  nec.h
csomnec/: CMakeLists.txt  cdrive.c  cdrive.h  csomnec.c  csomnec.h
doc/: Authors.txt  Bugs.md  Bugs.txt  CMakeLists.txt  ChangeLog.txt  Copyright.txt  News.md  News.txt  ReadMe.txt  ToDo.md  ToDo.txt  aegnec2.1  aegsomnec.1  cnec2.1  csomnec.1
install/: build-linux-gcc-athlonxp.sh  build-linux-gcc-i686.sh  build-linux-pgi-i686.sh
mlapack/: CMakeLists.txt
nec2d/: CMakeLists.txt  arc.f  atgn2.f  blckin.f  blckot.f  cabc.f  cang.f  cmngf.f  cmset.f  cmss.f  cmsw.f  cmws.f  cmww.f  conect.f  couple.f  dataeq.inc  datagn.f  dataj.inc  db10.f  db20.f  efld.f  eksc.f  ekscx.f  etmns.f  facgf.f  facio.f  factr.f  factrs.F  fbar.f  fblock.f  fbngf.f  fdrive.f  ffld.f  fflds.f  filsuf.f  gf.f  gfil.f  gfld.f  gfout.f  ggrid.inc  (+56 more)
somnec/: CMakeLists.txt  bessel.f  cntour.inc  evlcom.inc  evlua.f  fdrive.f  ggrid.inc  gshank.f  hankel.f  lambda.f  rom1.f  saoa.f  somnec.f  test.f  timer.F
tests/: CMakeLists.txt  createngf.nec  createngf.val  runnec.sh.cmake  runsomnec.sh.cmake  stestdip.nec  stestdip.val  test0300.nec  test0300.val  test0600.nec  test0600.val  test1200.nec  test1200.val  test2000.nec  test2000.val  testcomm.nec  testcomm.val  testcoup.nec  testcoup.val  testdip1.nec  testdip1.val  testdip2.nec  testdip2.val  testnetw.nec  testnetw.val  testngf1.nec  testngf1.val  testngf2.nec  testngf2.val  testsymm.nec  testsymm.val  testtran.nec  testtran.val  testvdip.nec  testvdip.val
